--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  meta: ^1.12.0
 
 dev_dependencies:
   flutter_test:
