provider practice - 30/6/24 - 8:53AM

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: state_management_flutter
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -12,6 +12,7 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   meta: ^1.12.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
